--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="text-center">
-            <a href="">CLICK HERE THẰNG ĐĨ</a>
+            <a href="https://truongtin1515.github.io/ngothanhvu/">CLICK HERE THẰNG ĐĨ</a>
             </div>
         </form>
     </div>
